fix(content): locale-safe ids, large-radius particle visibility+scaling, hostile-mob targeting, slider sync, survival datapack (loot/recipe/tags), metadata